
CHANGELOG for cope

This file lists all changes relevant for the user - especially all
API changes and new features recommended for most users. The log may
omit bug fixes.
The items are sorted inversely, i.e. lastest items are on top

--------------------------------------------------------------------------
* move Item.newType to class TypesBound
	deprecated version is provided
* move Type.forClass[Unchecked] to a new class TypesBound
	deprecated version is provided
* renamed Type#isJavaClassExclusive to isBound
	deprecated version is provided
* fix instrumented javadoc after "Type.newItem does not invoke creation constructor anymore"
	(see below), heavily affects instrumented code !
* DynamicModel uses MapField for names
	this affects names of columns and tables in database schema,
	requires a revision
* reorganized creation and activation of items,
	breaks backwards API compatibility
	heavily affects instrumented code !
	- Type.newItem does not invoke creation constructor anymore,
		this breaks preCreate constructs
		use a static method "SetValue[] beforeNewCopeItem(SetValue[])" instead
		search for @cope.generic.constructor none
	- renamed Item.postCreate() to afterNewCopeItem()
		the compiler will help you, if you have your @Override annotations in place
	- renamed instrumentor tag @cope.reactivation.constructor to @cope.activation.constructor
		this is very rarly used
	- reactivation constructor changed
		+ new signature instead of 
			Item(com.exedio.cope.util.ReactivationDummy, int[, Type]) is now
			Item(com.exedio.cope.ActivationParameters)
		+ in Item is now protected instead of public
	- removed creation constructor Item(SetValue[], Type)
		use Type.newItem instead
* make Type.This a top-level class
	this breaks backwards API compatibility, but is likely to affect a generic backoffice only
* do not use BackingItem for DynamicModel anymore
	this breaks backwards API compatibility, but is likely to affect a generic backoffice only